--- a/code/leetcode-java/pom.xml
+++ b/code/leetcode-java/pom.xml
@@ -8,7 +8,7 @@
   <artifactId>leetcode</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>leetcode</name>
+  <name>leetcode-java</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
